ipc/ipdl/test/ipdl/ok/Punion_Comparable.ipdl
[Comparable] union Basic {
    int;
    double;
};

sync protocol Punion_Comparable {

parent:
    sync Msg(Basic p) returns (Basic r);

};
